17-Ingress/blue.yaml
# Blue Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
  labels:
    app: blue-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
      - name: bluepod
        image: sujanreddy76/nginx:blue
        ports:
        - containerPort: 80
---
# Blue Service
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  labels:
    app: blue-app
spec:
  type: NodePort
  selector:
    app: blue-app
  ports:
  - port: 80 #Service Port
    targetPort: 80  #Container port
