17-Ingress/green.yaml
# Green Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
  labels:
    app: green-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
      - name: greenpod
        image: sujanreddy76/nginx:green
        ports:
        - containerPort: 80
---
# Green Service
apiVersion: v1
kind: Service
metadata:
  name: green-service
  labels:
    app: green-app
spec:
  type: NodePort
  selector:
    app: green-app
  ports:
  - port: 80 #Service Port
    targetPort: 80  #Container port
