17-Ingress/orange.yaml
# Orange Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orange-deployment
  labels:
    app: orange-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orange-app
  template:
    metadata:
      labels:
        app: orange-app
    spec:
      containers:
      - name: orangepod
        image: sujanreddy76/nginx:orange
        ports:
        - containerPort: 80
---
# Orange Service
apiVersion: v1
kind: Service
metadata:
  name: orange-service
  labels:
    app: orange-app
spec:
  type: NodePort
  selector:
    app: orange-app
  ports:
  - port: 80 #Service Port
    targetPort: 80  #Container port
