17-Ingress/context-based-ingress.yaml
# context-based-ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: context-based-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'  
spec:
  defaultBackend:
    service:
      name: orange-service
      port:
        number: 80
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/blue"
        backend:
          service:
            name: blue-service
            port:
              number: 80
      - pathType: Prefix
        path: "/green"
        backend:
          service:
            name: green-service
            port:
              number: 80
