17-Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: first-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'  
  # annotations:
  #   kubernetes.io/ingress.class: "gce-internal"
spec:
  defaultBackend:
    service:
      name: blue-service
      port:
        number: 80 #service port
